# Final_Project

./: .gitignore  README.md  franka_trajectory.csv  franka_trajectory_1.csv  trajectory_data.csv
control_franka/launch/: packing_object.launch.xml
data/: s2_after.csv  s4_after.csv
data_2/: s1_after.csv  s2_after.csv  s3_after.csv  s4_after.csv  s5_after.csv  s6_after.csv  s7_after.csv  s8_after.csv  w_s1_after.csv  w_s2_after.csv  w_s3_after.csv  w_s4_after.csv
data_3/: s1_after.csv  s2_after.csv  s3_after.csv  w10_after.csv  w11_after.csv  w12_after.csv  w13_after.csv  w1_after.csv  w2_after.csv  w3_after.csv  w4_after.csv  w5_after.csv  w6_after.csv  w7_after.csv  w8_after.csv  w9_after.csv
data_analyze/: analyze_data.py  parse_data_csv.py
density_map/: data_analyze.py  map_generate.py
density_map/data/: s3_after.csv  s7_after.csv  s8_after.csv
ergodic/: cluster_to_map.py
impedance_control/: damping.cpp  friction_compensation.cpp  impedance_force.cpp  teleop_pub.cpp  teleop_sub.cpp  teleop_sub_habtic.cpp
src/: trajectory_data_1.csv  trajectory_data_2.csv  trajectory_data_3.csv
src/control_franka/: package.xml  setup.cfg  setup.py
src/control_franka/control_franka/: delay_node.py  move_cartesian.py  run.py
src/control_franka_interfaces/: CMakeLists.txt  package.xml
src/control_franka_interfaces/action/: MoveCartesian.action
src/data_analyze/: aligning.py  db3_csv.py
src/density_map/: asdasd.py  data_analyze.py  map_3d.py  map_generate.py
src/density_map/data/: s5_after.csv  s6_after.csv
src/impedance_control/: CMakeLists.txt  teleop_pub_habtic.cpp  white_light.cpp
